# indexer-service

./: .codecov.yml  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  README.md  buildspec.yml  cloudbuild.yaml  compose.dev.yaml  config.yml  lcov.info
.github/workflows/: coverage.yml  linters-cargo.yml  linters.yml  pull-request.yml  rust-build.yml
docs/: sequence_architecture.txt
examples/pragma/mainnet/: mainnet-script-future.js  mainnet-script-spot-checkpoint.js  mainnet-script-spot.js  mainnet-script-vrf-requests.js
examples/pragma/pragma-devnet/: devnet-script-dispatch.js  devnet-script-spot-checkpoint.js  devnet-script-spot.js  mainnet-script-future.js  mainnet-script-spot.js  mainnet-script-vrf-requests.js
examples/pragma/testnet/: future_entry.js  goerli-script-future.js  goerli-script-spot.js  sepolia-script-future.js  sepolia-script-oo-requests.js  sepolia-script-spot-checkpoint.js  sepolia-script-spot.js  sepolia-script-vrf-requests.js  spot_entry.js  vrf-testnet-script-requests.js
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  externalSecret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secretStore.yaml  service.yaml  serviceaccount.yaml
infra/onchain-db/: 01-init.sql
local/: gcs-sa.json  init-gcs.sh
migrations/2023-09-18-115821_create_indexers/: down.sql  up.sql
migrations/2023-09-28-093136_add_target_url/: down.sql  up.sql
migrations/2023-10-04-201613_add_table_name/: down.sql  up.sql
migrations/2023-10-05-062732_target_url_nullable/: down.sql  up.sql
migrations/2023-12-21-135159_add_indexer_status_port/: down.sql  up.sql
migrations/2024-11-24-191420_add_indexer_custom_connection_string/: down.sql  up.sql
migrations/2025-01-22-173123_add_indexer_starting_block/: down.sql  up.sql
scripts/: 5bf04bf2-c712-419c-b4b1-7efc96b365cb.js  install_sink.sh  setup-localstack.sh
src/: config.rs  errors.rs  main.rs  routes.rs
src/constants/: indexers.rs  mod.rs  s3.rs  sqs.rs
src/consumers/: indexers.rs  mod.rs
src/domain/models/: indexer.rs  mod.rs  types.rs
src/grpc/: apibara_sink_v1.rs  mod.rs
src/handlers/: mod.rs
src/handlers/global/: health.rs
src/handlers/indexers/: create_indexer.rs  delete_indexer.rs  fail_indexer.rs  get_indexer.rs  mod.rs  start_indexer.rs  stop_indexer.rs  utils.rs
src/handlers/indexers/indexer_types/: console.rs  mod.rs  postgres.rs  webhook.rs
src/infra/: errors.rs
src/infra/db/: schema.rs
src/infra/repositories/: indexer_repository.rs  mod.rs
src/publishers/: indexers.rs  mod.rs
src/tests/: mod.rs  repository.rs  server.rs  types.rs
src/tests/common/: constants.rs  mod.rs  multipart.rs  utils.rs
src/tests/scripts/: broken_indexer.js  test.js
src/tests/server/: common.rs  mod.rs  postgres.rs  webhook.rs
src/types/: mod.rs  sqs.rs
src/utils/: env.rs  mod.rs  serde.rs
src/utils/custom_extractors/: json_extractor.rs  path_extractor.rs
