[package]
name = "indexer-service"
version = "0.1.0"
edition = "2021"


[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
aws-sdk-sqs = "0.30.0"
axum = { version = "0.6", features = ["macros", "multipart"] }
axum-macros = "0.3"
chrono = { version = "0.4.26", features = ["serde"] }
deadpool-diesel = { version = "0.4", features = ["postgres"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json"] }
diesel_migrations = "2"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqs_worker = "0.1.3"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0.49"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
